<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <ImageView
      android:id="@+id/mAddNoteBackBtn"
      android:layout_width="?attr/actionBarSize"
      android:layout_height="?attr/actionBarSize"
      android:scaleType="centerInside"
      android:src="@drawable/ic_back_arrow_dark_shadow"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <View
      android:id="@+id/dividerfirsst"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_marginEnd="10dp"
      android:layout_marginStart="10dp"
      android:background="@color/grey_light"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/mAddNoteBackBtn"
      />

  <EditText
      android:id="@+id/mAddNoteTitle"
      android:layout_width="0dp"
      android:layout_height="?attr/actionBarSize"
      android:background="@color/noColor"
      android:fontFamily="@font/karla"
      android:hint="@string/enter_title"
      android:paddingEnd="15dp"
      android:textSize="22sp"
      android:paddingStart="15dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/dividerfirsst"
      />

  <View
      android:id="@+id/dividersecond"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:background="@color/grey_light"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/mAddNoteTitle"
      />

  <EditText
      android:id="@+id/mAddNoteContent"
      android:gravity="top"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="8dp"
      android:paddingStart="15dp"
      android:paddingEnd="15dp"
      android:hint="@string/write_your_note"
      android:background="@color/noColor"
      android:maxLength="2000"
      app:layout_constraintBottom_toTopOf="@+id/mAddNoteSaveBtn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/dividersecond"
      />

  <TextView
      android:id="@+id/mAddNoteSaveBtn"
      android:layout_width="0dp"
      android:layout_height="?attr/actionBarSize"
      android:background="@color/colorAccent"
      android:clickable="true"
      android:focusable="true"
      android:text="@string/save"
      android:gravity="center"
      android:textSize="22sp"
      android:textColor="@color/white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      />

</androidx.constraintlayout.widget.ConstraintLayout>