<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
  >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/karla"
        android:text="@string/email"
        android:textColor="@color/dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
    />

    <EditText
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:id="@+id/mSignupEmail"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
    />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/karla"
        android:text="@string/username"
        android:textColor="@color/dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mSignupEmail"
    />

    <EditText
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:id="@+id/mSignupUsername"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="4dp"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
    />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/karla"
        android:text="@string/password"
        android:textColor="@color/dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mSignupUsername"
    />

    <EditText
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:id="@+id/mSignupPassword"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:inputType="textPassword"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
    />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/karla"
        android:text="@string/repeat_password"
        android:textColor="@color/dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mSignupPassword"
    />

    <EditText
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:id="@+id/mSignupRepeatPassword"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:inputType="textPassword"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
    />

    <TextView
        android:id="@+id/mSignupBtn"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="28dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/karla"
        android:gravity="center"
        android:text="@string/signup"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/mSignupRepeatPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/mSignupRepeatPassword"
        app:layout_constraintTop_toBottomOf="@+id/mSignupRepeatPassword"
    />

    <View
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mSignupBtn"
    />

  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>