<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/indieflower"
        android:text="@string/app_name"
        android:textColor="@color/dark"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/karla"
        android:text="user name"
        android:textColor="@color/dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        />

    <EditText
        android:id="@+id/mLoginUsername"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="8dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/karla"
        android:text="password"
        android:textColor="@color/dark"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mLoginUsername"
        />

    <EditText
        android:id="@+id/mLoginPassword"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginEnd="42dp"
        android:layout_marginTop="8dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        />

    <TextView
        android:id="@+id/mLoginBtn"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorAccent"
        android:fontFamily="@font/karla"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="@+id/mLoginPassword"
        app:layout_constraintStart_toStartOf="@+id/mLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/mLoginPassword"
        />

    <TextView
        android:id="@+id/mLoginForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/karla"
        android:text="@string/i_forgot_pass"
        android:textColor="@color/link_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mLoginBtn"
        />

    <TextView
        android:id="@+id/mLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/karla"
        android:text="@string/create_account"
        android:textColor="@color/link_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mLoginForgotPass"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mLoginRegister"
        />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>